--- a/planning.tex
+++ b/planning.tex
@@ -1,7 +1,6 @@
-\chapter{Validation and experimental planning}
+\chapter{Solution validation}
 \label{chap:planning}
 \glsresetall
-% TODO: change the chapter title to "Validation" or something similar
 
 \chapterprecishere{%
   All models are wrong, but some are useful.
