Updates and adjustments.

--- a/about.tex
+++ b/about.tex
@@ -105,3 +105,5 @@ I would like to thank the following contributors for their help in improving thi
   \item Manoel V. Machado (aka \emph{ryukinix})
   \item Vitor V. Curtis
 \end{itemize}
+
+All contributors freely waived their rights to the content they contributed to this book.
