--- a/main.tex
+++ b/main.tex
@@ -269,7 +269,8 @@
     \reflectbox{\includegraphics[height=0.3\paperheight]{images/toucan_bw.png}}%
   };
   \node[anchor=south west, inner sep=10mm] at (current page.south west)
-    {\large\sffamily Version 1.0 ``\textit{Tropical Toucan}''};
+    {\large\sffamily Version 0.1 ``\textit{Audacious Hatchling}''};
+    % {\large\sffamily Version 1.0 ``\textit{Tropical Toucan}''};
   \node[anchor=south east, inner sep=10mm] at (current page.south east) {\large\sffamily\today};
   \node[anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science project}};
   \node[anchor=north, inner sep=5mm](subtitle) at (title.south) {\LARGE\sffamily\uppercase{an inductive learning approach}};
